--- a/SCAPPINO/Cube1.html
+++ b/SCAPPINO/Cube1.html
@@ -729,11 +729,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i496.image.css:image/base/css*/
 #i496 { opacity: 1; }
 /*#/#*//*#i496.i497.positioning.css:positioning/base/css.1*/
-#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 90px;
-        -ms-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 120px;
+        -ms-transform: translate(0, 0) translate(0px, 134px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 134px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 134px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 134px) rotate(0deg);
 }
 /*#/#*//*#i5.i414.image.css:image/base/css*/
 #i414 { opacity: 1; }
@@ -939,7 +939,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i354">Perú, ¡el país más rico 
 del mundo!</div>
 <!--#/#--><!--#i5.i496.image.html:image/html-->
-<img id="i496" src="https://i.imgur.com/hgC9lX6.jpg"/>
+<img id="i496" src="https://i.imgur.com/XRhLfI8.jpg"/>
 <!--#/#--><!--#i5.i414.image.html:image/html-->
 <img id="i414" src="https://i.imgur.com/zcgW2DL.jpg"/>
 <!--#/#--><!--#i5.i492.image.html:image/html-->
@@ -1071,7 +1071,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1156,7 +1156,7 @@ var el = document.getElementById('i468');
 
 el.addEventListener('click', function(e){
     /*#i470.i471.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1235,7 +1235,7 @@ var el = document.getElementById('i472');
 
 el.addEventListener('click', function(e){
     /*#i474.i475.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
