--- a/SCAPPINO/Cube2.html
+++ b/SCAPPINO/Cube2.html
@@ -720,11 +720,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i496.image.css:image/base/css*/
 #i496 { opacity: 1; }
 /*#/#*//*#i496.i497.positioning.css:positioning/base/css.1*/
-#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 90px;
-        -ms-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 160px) rotate(0deg);
+#i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 120px;
+        -ms-transform: translate(0, 0) translate(0px, 147px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 147px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 147px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 147px) rotate(0deg);
 }
 /*#/#*//*#i5.i414.image.css:image/base/css*/
 #i414 { opacity: 1; }
@@ -927,7 +927,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i496.image.html:image/html-->
-<img id="i496" src="https://i.imgur.com/qtSwQlW.jpg"/>
+<img id="i496" src="https://i.imgur.com/Pf92S2d.jpg"/>
 <!--#/#--><!--#i5.i414.image.html:image/html-->
 <img id="i414" src="https://i.imgur.com/SFd70J8.jpg"/>
 <!--#/#--><!--#i5.i492.image.html:image/html-->
@@ -1059,7 +1059,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1144,7 +1144,7 @@ var el = document.getElementById('i468');
 
 el.addEventListener('click', function(e){
     /*#i470.i471.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1223,7 +1223,7 @@ var el = document.getElementById('i472');
 
 el.addEventListener('click', function(e){
     /*#i474.i475.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/ChWELADC3vznG5N38'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
