--- a/Cusqueña Terra/Fade_300x600.html
+++ b/Cusqueña Terra/Fade_300x600.html
@@ -441,7 +441,7 @@
                     <img src="https://i.imgur.com/AdJJn8O.png" style="height:55px">
                 </div>
 
-                <div class="Texto"><img src="https://i.imgur.com/E9QyqmE.jpg" style="height: 120px;  margin-top: 480px; margin-left: -240px;"></div>
+                <div class="Texto"><img src="https://i.imgur.com/XBxIwnv.jpg" style="height: 120px;  margin-top: 480px; margin-left: -240px;"></div>
                 
         
 
