--- a/Cusqueña Terra/Venetian.html
+++ b/Cusqueña Terra/Venetian.html
@@ -2270,7 +2270,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i103.image.html:image/html-->
-<img id="i103" src="https://i.imgur.com/X9KQzho.jpg"/>
+<img id="i103" src="https://i.imgur.com/Aw6q9rd.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/AdJJn8O.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
