--- a/SCAPPINO/Venetian_Masaryk.html
+++ b/SCAPPINO/Venetian_Masaryk.html
@@ -2247,10 +2247,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
 #i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 38px; height: 38px;
-        -ms-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
-        transform: translate(0, 0) translate(133px, 542px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(126px, 529px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(126px, 529px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(126px, 529px) rotate(0deg);
+        transform: translate(0, 0) translate(126px, 529px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2265,14 +2265,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i81 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i81.i82.positioning.css:positioning/base/css.2*/
-#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 5.916666666666667%;
-        -ms-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
-}
-/*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
-#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 20.25%;
+#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 20.166666666666668%;
         -ms-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
@@ -2322,7 +2315,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/lo27w1R.jpg"/>
+<img id="i74" src="https://i.imgur.com/Pf92S2d.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2345,10 +2338,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i91" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
-<!--#/#--><!--#i70.container.html:container/html-->
-<div id="i70">
-    
-</div>
 <!--#/#--><!--#i93.shape.html:shape/html-->
 <div id="i93"></div>
 <!--#/#--><!--#i97.image.html:image/html-->
@@ -2444,21 +2433,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i70.i71.positioning.js:positioning/base/js.2*/
-bmShow('i70');
-/*#/#*//*#i70.i87.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i70');
-
-el.addEventListener('click', function(e){
-    /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i93.i94.positioning.js:positioning/base/js.2*/
 bmShow('i93');
 /*#/#*//*#i93.i95.actions.js:actions/base/js.1*/
@@ -2501,7 +2475,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i107.i108.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/PKqPmbYRCKZE85xG9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2586,11 +2560,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
 name: LINK MAPA;
 /*#/#*//*#i81.i82.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i70.container.meta:container/meta*/
-name: Container 1;
-data: /*!*/{}/*!*/;
-/*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i93.shape.meta:shape/meta*/
 name: LINK;
