--- a/Cusqueña Terra/Venetian.html
+++ b/Cusqueña Terra/Venetian.html
@@ -2266,7 +2266,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/WVGzI0x.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/IZokBbE.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/nlQfhfW.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i103.image.html:image/html-->
