--- a/CHEETOS/Cube.html
+++ b/CHEETOS/Cube.html
@@ -942,7 +942,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">GANA: Increíbles premios semanalmente acumulando puntos.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/vFUPcm5.jpg"/>
+<img id="i60" src="https://i.imgur.com/5E3rb4G.jpg.jpg"/>
 <!--#/#--><!--#i6.i354.image.html:image/html-->
 <img id="i354" src="https://i.imgur.com/bjdSPZp.png"/>
 <!--#/#--><!--#i6.i356.image.html:image/html-->
