--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2220,28 +2220,73 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 197px; height: 53px;
-        -ms-transform: translate(0, 0) translate(61px, 220px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(61px, 220px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(61px, 220px) rotate(0deg);
-        transform: translate(0, 0) translate(61px, 220px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
+}
+/*#/#*//*#i111.text.css:text/base/css*/
+#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i111.i112.positioning.css:positioning/base/css.2*/
+#i111 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 150px;
+        -ms-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
+        transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
+}
+/*#/#*//*#i117.text.css:text/base/css*/
+#i117 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i117.i118.positioning.css:positioning/base/css.2*/
+#i117 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
+        -ms-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
+}
+/*#/#*//*#i109.text.css:text/base/css*/
+#i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i109.i110.positioning.css:positioning/base/css.2*/
+#i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 221px; height: 150px;
+        -ms-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
+        transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
+}
+/*#/#*//*#i115.text.css:text/base/css*/
+#i115 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i115.i116.positioning.css:positioning/base/css.2*/
+#i115 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
+        -ms-transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
+        transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 228px; height: 150px;
-        -ms-transform: translate(0, 0) translate(49px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(49px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(49px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(49px, 315px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 229px; height: 150px;
+        -ms-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
+        transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
+}
+/*#/#*//*#i113.text.css:text/base/css*/
+#i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
+#i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
+        -ms-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 47px;
-        -ms-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
+        transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2256,11 +2301,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i99 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.2*/
-#i99 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i93.image.css:image/base/css*/
 #i93 { opacity: 1; }
@@ -2309,13 +2354,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/O7TzbZI.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/bjdSPZp.png"/>
+<!--#/#--><!--#i111.text.html:text/html-->
+<div id="i111">GANA: Increíbles premios semanalmente acumulando puntos.</div>
+<!--#/#--><!--#i117.text.html:text/html-->
+<div id="i117">3.</div>
+<!--#/#--><!--#i109.text.html:text/html-->
+<div id="i109">SUBE: Tus creaciones monstruosas a Cheetos.com.mx</div>
+<!--#/#--><!--#i115.text.html:text/html-->
+<div id="i115">2.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">1. CREA
-Monstruos con la variedad de Cheetos con tira.
-2. SUBE
-Tus creaciones monstruosas a Cheetos.com.mx
-3. GANA
-Increíbles premios semanalmente acumulando puntos.</div>
+<div id="i68">CREA: Monstruos con la variedad de Cheetos con tira.</div>
+<!--#/#--><!--#i113.text.html:text/html-->
+<div id="i113">1.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡PARTICIPA CON CHEETOS MONSTRUOSO!</div>
 <!--#/#--><!--#i91.image.html:image/html-->
@@ -2384,6 +2434,10 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
+/*#/#*//*#i111.i112.positioning.js:positioning/base/js.2*/
+bmShow('i111');
+/*#/#*//*#i109.i110.positioning.js:positioning/base/js.2*/
+bmShow('i109');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
@@ -2458,6 +2512,12 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
+bmShow('i113');
+/*#/#*//*#i115.i116.positioning.js:positioning/base/js.2*/
+bmShow('i115');
+/*#/#*//*#i117.i118.positioning.js:positioning/base/js.2*/
+bmShow('i117');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2496,9 +2556,29 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i111.text.meta:text/meta*/
+name: GANA: Increíbles premios semanalmente acumulando puntos.; customName: false;
+/*#/#*//*#i111.i112.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i117.text.meta:text/meta*/
+name: 3.; customName: 1;
+/*#/#*//*#i117.i118.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i109.text.meta:text/meta*/
+name: SUBE: Tus creaciones monstruosas a Cheetos.com.mx; customName: false;
+/*#/#*//*#i109.i110.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i115.text.meta:text/meta*/
+name: 2.; customName: 1;
+/*#/#*//*#i115.i116.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: 1. CREA Monstruos con la variedad de Cheetos con tira. 2. SUBE Tus creaciones monstruosas a Cheetos.com.mx 3. GANA Increíbles premios semanalmente acumulando puntos.; customName: false;
+name: CREA: Monstruos con la variedad de Cheetos con tira.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i113.text.meta:text/meta*/
+name: 1.; customName: 1;
+/*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
 name: ¡PARTICIPA CON CHEETOS MONSTRUOSO!; customName: false;
