--- a/CHEETOS/Fade.html
+++ b/CHEETOS/Fade.html
@@ -77,7 +77,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/xh22320.gif");
+            background: url("https://i.imgur.com/k7V9soI.gif");
             background-size: cover;
 
         }
