--- a/Garabatos/Cube-SantaFe.html
+++ b/Garabatos/Cube-SantaFe.html
@@ -1073,7 +1073,7 @@ var el = document.getElementById('i200');
 
 el.addEventListener('click', function(e){
     /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/vSWumkvfAfhu6wPaA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1116,7 +1116,7 @@ var el = document.getElementById('i232');
 
 el.addEventListener('click', function(e){
     /*#i234.i235.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -1165,7 +1165,7 @@ var el = document.getElementById('i252');
 
 el.addEventListener('click', function(e){
     /*#i254.i255.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/vSWumkvfAfhu6wPaA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1206,7 +1206,7 @@ var el = document.getElementById('i248');
 
 el.addEventListener('click', function(e){
     /*#i250.i251.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -1264,7 +1264,7 @@ var el = document.getElementById('i244');
 
 el.addEventListener('click', function(e){
     /*#i246.i247.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/vSWumkvfAfhu6wPaA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
