--- a/Garabatos/Venetian-SantaFe.html
+++ b/Garabatos/Venetian-SantaFe.html
@@ -2489,7 +2489,7 @@ var el = document.getElementById('i58');
 
 el.addEventListener('click', function(e){
     /*#i74.i75.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/vSWumkvfAfhu6wPaA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
