--- a/Garabatos/Venetian-masaryk.html
+++ b/Garabatos/Venetian-masaryk.html
@@ -2198,10 +2198,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i62 { opacity: 1; }
 /*#/#*//*#i62.i63.positioning.css:positioning/base/css.2*/
 #i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 42px;
-        -ms-transform: translate(0, 0) translate(111px, 414px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(111px, 414px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(111px, 414px) rotate(0deg);
-        transform: translate(0, 0) translate(111px, 414px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(110px, 410px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(110px, 410px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(110px, 410px) rotate(0deg);
+        transform: translate(0, 0) translate(110px, 410px) rotate(0deg);
 }
 /*#/#*//*#i64.image.css:image/base/css*/
 #i64 { opacity: 1; }
@@ -2337,7 +2337,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i54.text.html:text/html-->
 <div id="i54">En Garabatos podrás encontrar una gran variedad de platillos, bebidas y postres que se adaptan a todos los gustos y estilos.</div>
 <!--#/#--><!--#i52.image.html:image/html-->
-<img id="i52" src="https://i.imgur.com/8zAktod.jpg"/>
+<img id="i52" src="https://i.imgur.com/ZqZk5jO.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/74ymtrw.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2440,7 +2440,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/9kMaN6e38HBhGK5S7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/QzKH65E899NqQJ6BA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2455,7 +2455,7 @@ var el = document.getElementById('i78');
 
 el.addEventListener('click', function(e){
     /*#i80.i81.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/9kMaN6e38HBhGK5S7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/QzKH65E899NqQJ6BA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2472,7 +2472,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i72.i73.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/9kMaN6e38HBhGK5S7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/QzKH65E899NqQJ6BA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2489,7 +2489,7 @@ var el = document.getElementById('i58');
 
 el.addEventListener('click', function(e){
     /*#i74.i75.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/9kMaN6e38HBhGK5S7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/QzKH65E899NqQJ6BA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2506,7 +2506,7 @@ var el = document.getElementById('i60');
 
 el.addEventListener('click', function(e){
     /*#i76.i77.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/9kMaN6e38HBhGK5S7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/QzKH65E899NqQJ6BA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
