--- a/Garabatos/FadeGeo300x600-masaryk.html
+++ b/Garabatos/FadeGeo300x600-masaryk.html
@@ -453,7 +453,7 @@
                 <div  class="map">
                 
 
-                    <span> <a href="https://goo.gl/maps/9kMaN6e38HBhGK5S7" target="_blank" >  <img src="https://i.imgur.com/QxP0UtU.jpg"></a> </span>
+                    <span> <a href="https://goo.gl/maps/9kMaN6e38HBhGK5S7" target="_blank" >  <img src="https://i.imgur.com/E1uiI3e.jpg"></a> </span>
         </div>
 
             </span>    
