--- a/Mitsubishi2/formulario-def.html
+++ b/Mitsubishi2/formulario-def.html
@@ -636,8 +636,8 @@
             <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
             <form id="question" class="FR form">
                 <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/pgfWVwb.gif" style="height:450px; width: 300px; text-decoration: none; border-radius:0px; margin-top:-5px; margin-left: -30px;
-    box-shadow:0 0 0px 0px #fff; margin-bottom: -48px;"></a></span>
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/tcKPNRV.gif" style="height:400px; width: 300px; text-decoration: none; border-radius:0px; margin-top:1px; margin-left: -30px;
+    box-shadow:0 0 0px 0px #fff; margin-bottom: -10px;"></a></span>
 
                     <!-- <span style="bottom:5px; text-align:center ; float:center; background-color: #e22532;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
 
@@ -656,8 +656,8 @@
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 18px; margin-left: 10px;">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://www.heb.com.mx/terms-conditions/" target="_blank" style="font-size: 13px; font-family: Trebuchet MS; text-align: left; color: #105677;">He leído y acepto el
-                                <u><b>AVISO DE PRIVACIDAD</b></u></a><a href="https://www.heb.com.mx/terms-conditions/" target="_blank" style="font-size: 13px; font-family: Trebuchet MS; text-align: left; color: #105677;  "> y los <u><b>TÉRMINOS Y CONDICIONES</b>.</u></a></label>
+                        <label style="min-width: 80%" for="condiciones"><a href="https://www.mitsubishi-motors.mx/modelos/eclipse-crossterms-conditions/" target="_blank" style="font-size: 13px; font-family: Trebuchet MS; text-align: left; color: #105677;">He leído y acepto el
+                                <u><b>AVISO DE PRIVACIDAD</b></u></a><a href="https://www.mitsubishi-motors.mx/modelos/eclipse-crossterms-conditions/" target="_blank" style="font-size: 13px; font-family: Trebuchet MS; text-align: left; color: #105677;  "> y los <u><b>TÉRMINOS Y CONDICIONES</b>.</u></a></label>
 
 
                         <!--    <input type="checkbox" width="10" name="condiciones2" style="text-align: left; background-color: red" /></span>
@@ -675,7 +675,7 @@
                         <input type="checkbox" width="10" name="condiciones" style="text-align: left; background-color: #a4061f" required="check" />
                     </span>
 
-                    <input type="submit" name="bottom" style="margin-top: 8px; text-align: center; background-color:#e22532; color: white; border-radius: 3px; width: 100px; position: absolute; left: 50%; margin-left: -50px; cursor: pointer" value="ENVIAR">
+                    <input type="submit" name="bottom" style="margin-top: 8px; text-align: center; background-color:#e22532; color: white; border-radius: 3px; width: 200px; position: absolute; left: 50%; margin-left: -100px; cursor: pointer" value="SOLICITA TU PRUEBA">
                 </center>
             </form>
         </div>
@@ -749,7 +749,7 @@
             function  $('.button'.click(function(){
                 return function() {
                     var adfClickTAGName = 'clickTAG',
-                        adfClickTAGUrl = 'https://www.heb.com.mx/';
+                        adfClickTAGUrl = 'https://www.mitsubishi-motors.mx/modelos/eclipse-cross';
 
                     window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
                 }
