--- a/Mitsubishi2/Venetian-300x600.html
+++ b/Mitsubishi2/Venetian-300x600.html
@@ -2302,7 +2302,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/i15CzUA.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/PqoQ4rw.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/xzRVwxy.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
