--- a/Easy/Fade_320x50.html
+++ b/Easy/Fade_320x50.html
@@ -59,7 +59,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/RXIvumT.jpg");
+            background: url("https://i.imgur.com/jz0RlFV.jpg");
             background-size: cover;
         }
 
