--- a/Easy/Venetian.html
+++ b/Easy/Venetian.html
@@ -2289,13 +2289,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/YgqsXGF.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/AtWmrPo.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/R3ASsgy.gif"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/c8J6713.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/G5XfSDS.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/ltpGJN8.png"></dataimg>
 <!--#/#--><!--#i2.i82.slice-image.html:slice-image/html.1-->
-<dataimg id="i82" src="https://i.imgur.com/QlhhRHF.jpg"></dataimg>
+<dataimg id="i82" src="https://i.imgur.com/anJR36Q.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i7.text.html:text/html-->
@@ -2424,13 +2424,13 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: YgqsXGF.jpg; fileId: ; sourceTypeId: externalUrl;
+name: AtWmrPo.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: R3ASsgy.gif; fileId: ; sourceTypeId: externalUrl;
+name: c8J6713.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: G5XfSDS.jpg; fileId: ; sourceTypeId: externalUrl;
+name: ltpGJN8.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i82.slice-image.meta:slice-image/meta.1*/
-name: QlhhRHF.jpg; fileId: ; sourceTypeId: externalUrl;
+name: anJR36Q.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
